# nexocrypto

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  SETUP.md  docker-compose.yml  pyproject.toml  railway.json  schema.sql
.claude/: launch.json
connectors/: pyproject.toml
connectors/src/nexocrypto_connectors/: __init__.py  base.py
connectors/src/nexocrypto_connectors/binance_data/: __init__.py  connector.py
connectors/src/nexocrypto_connectors/bitunix/: __init__.py  auth.py  capture.py  connector.py  ws.py
connectors/src/nexocrypto_connectors/cmc/: __init__.py  connector.py
connectors/src/nexocrypto_connectors/coinglass/: __init__.py  connector.py
connectors/src/nexocrypto_connectors/cryptopanic/: __init__.py  connector.py
connectors/src/nexocrypto_connectors/lbank/: __init__.py  connector.py
examples/: bootstrap_db.ps1  demo_bitunix_public.py  demo_parser.py  run_api.py  run_backtest.py
services/api/: Dockerfile  pyproject.toml
services/api/src/nexocrypto_api/: admin.py  auth.py  deps.py  execution_coordinator.py  main.py  pg_store.py  routes.py  sso.py  store.py
services/api/src/nexocrypto_api/dashboard/: index.html
services/engine/: pyproject.toml
services/engine/src/nexocrypto_engine/: __init__.py
services/engine/src/nexocrypto_engine/backtest/: __init__.py  fills.py  metrics.py  runner.py
services/engine/src/nexocrypto_engine/execution/: __init__.py  executor.py
services/engine/src/nexocrypto_engine/paper/: __init__.py  engine.py
services/engine/src/nexocrypto_engine/risk/: __init__.py  engine.py  ev.py  guards.py  idempotency.py  liquidation.py  protected.py  sizing.py  types.py
services/engine/src/nexocrypto_engine/strategy/: __init__.py  base.py  ema_adx_trend.py  fvg_ob.py  indicators.py  vwap_rsi_meanrev.py
services/llm/: pyproject.toml
services/llm/src/nexocrypto_llm/: __init__.py  analyst.py
services/telegram_control/: pyproject.toml
services/telegram_control/src/nexocrypto_telegram_control/: __init__.py  bot.py
services/telegram_ingest/: pyproject.toml
services/telegram_ingest/src/nexocrypto_telegram_ingest/: __init__.py  parser.py  service.py
services/worker/: pyproject.toml
services/worker/src/nexocrypto_worker/: __init__.py  daemon.py  scan_cli.py  scanner.py
supabase/: test_auth_shim.sql
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_approvals.sql  0004_tenants.sql
tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_connections.py  test_api_cors.py  test_api_health.py  test_api_routes.py  test_api_sso.py  test_binance_data.py  test_bitunix_connector.py  test_bitunix_signing.py  test_bitunix_ws.py  test_cmc_connector.py  test_coinglass_connector.py  test_dashboard.py  test_execution_coordinator.py  test_execution_engine.py  test_lbank_connector.py  test_llm_analyst.py  test_pg_store.py  test_pg_store_approvals.py  test_rls.py  test_scanner.py  test_scanner_api_e2e.py  test_shared_models.py  test_telegram_control_bot.py  test_telegram_ingest_service.py  test_telegram_parser.py  test_vault.py
tests/fixtures/binance/: klines.json
tests/fixtures/bitunix/: account.json  cancel_orders.json  depth.json  funding_rate.json  kline.json  place_order.json  positions.json  ws_connect_ack.json  ws_depth_books.json
tests/fixtures/cmc/: listings_latest.json  quotes_latest.json
tests/fixtures/coinglass/: funding_weighted.json  liquidations.json  oi_history.json
tests/fixtures/lbank/: market_data.json  market_order.json
tests/risk/: _helpers.py  test_engine_integration.py  test_ev.py  test_guards.py  test_idempotency.py  test_liquidation.py  test_protected.py  test_sizing.py
tests/strategy/: _helpers.py  test_backtest.py  test_ema_adx_trend.py  test_fvg_ob.py  test_indicators.py  test_paper_engine.py  test_vwap_rsi_meanrev.py
