[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexocrypto-connectors"
version = "0.0.1"
description = "Exchange + context connectors for NexoCrypto. Bitunix-first."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "nexocrypto-shared",
]

[tool.setuptools.packages.find]
where = ["src"]
