[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexocrypto-api"
version = "0.0.1"
description = "FastAPI app for NexoCrypto."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "pyjwt[crypto]>=2.8,<3",
  "psycopg[binary]>=3.1,<4",
  "nexocrypto-shared",
  "nexocrypto-connectors",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nexocrypto_api" = ["dashboard/*.html", "dashboard/*.css", "dashboard/*.js"]
