[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexocrypto-telegram-control"
version = "0.0.1"
description = "Telegram Bot API control bot — notifications + inline-keyboard actions."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "nexocrypto-shared",
]

[tool.setuptools.packages.find]
where = ["src"]
