[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexocrypto-worker"
version = "0.0.1"
description = "Scanner + Celery tasks for NexoCrypto."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "nexocrypto-shared",
  "nexocrypto-engine",
  "nexocrypto-connectors",
]

[tool.setuptools.packages.find]
where = ["src"]
